--- a/invento.css
+++ b/invento.css
@@ -1,125 +1,7 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Lato', sans-serif;
-    color: #000;
-}
 
-nav {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 8vh;
-    background-color: #F6FBFF;
-    font-family: "Poppins", sans-serif;
-}
-
-
-
-.nav-links {
-    display: flex;
-    justify-content: space-around;
-    width: 30%;
-}
-
-.nav-links li {
-    list-style: none;
-}
-
-.nav-links a {
-    color: black;
-    text-decoration: none;
-    letter-spacing: 3px;
-    font-weight: bold;
-    font-size: 14px;
-}
-
-.burger {
-    display: none;
-}
-
-.burger div {
-    width: 25px;
-    height: 3px;
-    background-color: black;
-    margin: 5px;
-    transition: all 0.3s ease;
-}
-
-@media screen and (max-width: 1024px) {
-    .nav-links {
-        width: 60%;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    body {
-        overflow-x: hidden;
-    }
-
-    .nav-links {
-        position: fixed;
-        right: 0;
-        height: 92vh;
-
-        top: 8vh;
-        background-color:#F6FBFF;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 50%;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
-    }
-
-    .nav-links li {
-        opacity: 0;
-    }
-
-    .burger {
-        display: block;
-        cursor: pointer;
-    }
-}
-
-.nav-active {
-    transform: translateX(0%);
-}
-
-@keyframes navLinkFade {
-    from {
-        opacity: 0;
-        transform: translateX(50px);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-.toggle .line1 {
-    transform: rotate(-45deg) translate(-5px, 6px);
-}
-
-.toggle .line2 {
-    opacity: 0;
-}
-
-.toggle .line3 {
-    transform: rotate(45deg) translate(-5px, -6px);
-}
 .logo{
     width: 30%;
-
 }
-
-
-
-
 
 .student-profile{
     margin-top:10%
@@ -158,7 +40,12 @@ nav {
 }
 input{
     border: none;
+
 }
+input:focus{
+    border: none;
+}
+
 .card{
     border: 2px solid White;
     border-radius: 10px;
@@ -173,6 +60,13 @@ body {
     background-size: 64px 64px;
     background-position: 0 0,32px 32px;
 }
-input {
-    border: none;
+input[type='text']{
+    width: max-content ;
+    padding: 10px;
+    outline: none;
+}
+input[type='number']{
+    width: max-content;
+    padding: 10px;
+    outline: none;
 }
